--- a/.github/workflow/hello.yaml
+++ b/.github/workflow/hello.yaml
@@ -1,1 +1,16 @@
+name: Basic Workflow
+
+on:
+  push:
+  pull_request:
+
+jobs:
+  hello-world-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
+      - name: Print message
+        run: echo "Hello, GitHub Actions!"
 
