--- a/.github/workflows/matrix_test.yml
+++ b/.github/workflows/matrix_test.yml
@@ -24,4 +24,4 @@ jobs:
         run: echo "Using Python version: ${{ matrix.python-version }}"
 
       - name: Run Array Manipulation Script
-        run: python test_array_manipulation.py
+        run: python ./test_array_manipulation.py
