--- a/.github/workflows/matrix_test.yml
+++ b/.github/workflows/matrix_test.yml
@@ -24,4 +24,4 @@ jobs:
         python-version: ${{ matrix.python-version }}
            
     - name: Run array manipulation tests
-      run: pytest array_manipulation.py
+      run: python array_manipulation.py
