--- a/.github/workflows/app-deploy-s3.yml
+++ b/.github/workflows/app-deploy-s3.yml
@@ -1,7 +1,7 @@
 name: CI/CD Pipeline
 on:
   push:
-    branches: [develop]
+    branches: [main]
 jobs:
   continuous-integration:
     runs-on: ubuntu-latest
